Changes:

2.8.0
----------------
* go/cpp - Add support for printf (%04d) and houdini ($F04) pad syntax formats
* cpp - Prevent segfault when calling getters on default constructed FileSequence; return default values
* cmd/seqls - Update to a faster parallel filesystem walk library
* go - Update to Go 1.15.x

2.7.1
----------------
* cmd/seqls - Switch to a faster parallel filesystem walking library

2.7.0
----------------
* Removed vendored Go dependencies
* Fix handling of Windows path separator in FileSequence.SetDirname and findSequencesOnDisk
* cmd/seqls - Properly build against gofileseq/v2
* cmd/seqls - Add --hash1 flag to use pad hash width=1 instead of 4
* cmd/seqls - Add --strict flag to apply strict length of search pattern pad character to matches
* cpp: Add a cmake build setup

2.6.3
----------------
* Convert from Glide to Go module

2.6.2
----------------
* Add Go module support as v2
* exp/cpp: cleanups of experimental go/cpp binding

2.6.1
----------------
* Support a negative stepping value when start > end in frame range string pattern
* cpp: Prevent compiler warnings from int vs size_t

2.6.0
----------------
* cpp: Using C++11 and std::regex by default. Detect older compilers and use libpcre automatically as needed.
* go/cpp: Preserve complex file extensions parsed after a frame, such as file.0001.tar.gz (".tar.gz")

2.5.0
----------------
* go: Use strings.Builder instead of bytes.Buffer for less allocations (requires go >= 1.10)

2.4.0
----------------
* Update FindSequencesOnDisk to sort mixed frame padding into discreet sequence results
* Allow strict padding length check when filtering files for pattern match in FindSequenceOnDisk
* go/cpp: Adjust path split regex to better handle range directive chars being used at the end of a base name

2.3.1
----------------
* cpp-port: Fix: FrameSet::isValid() would return true even if it had a zero length range

2.3.0
----------------
* cpp - pure c++ port now available

2.2.3
----------------