@@ -4,6 +4,7 @@ Changes:
 ----------------
 * go/cpp - Add support for printf (%04d) and houdini ($F04) pad syntax formats
 * cpp - Prevent segfault when calling getters on default constructed FileSequence; return default values
+* cpp - Define FileSequence::operator bool() to return FileSequence::isValid()
 * cmd/seqls - Update to a faster parallel filesystem walk library
 * go - Update to Go 1.15.x
 
